# megu

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  CHANGELOG.md  README.md  README.old.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish-package.yml  test-package.yml
docs/: requirements.txt
docs/source/: _links.rst  conf.py  getting-started.rst  index.md  index.rst  installation.md  megu.rst  plugins.md  reference.md  usage.md
docs/source-old/: index
docs/source-old/plugins/: helpers.rst  index.rst  rules.rst  writing-plugins.rst
docs/source-old/usage-old/: configuration.rst  fetching-content.rst  index.rst  installing-plugins.rst
docs/source/_static/css/: style.css  tweaks.css
docs/source/plugins/: examples.rst  index.rst  rules.rst  writing-plugins.rst
docs/source/usage/: configuration.rst  data-descriptors.rst  index.rst
src/megu/: __init__.py  config.py  constants.py  env.py  errors.py  exceptions.py  filters.py  hash.py  hasher.py  helpers.py  log.py  models.py  services.py  types.py  utils.py
src/megu/cli/: __init__.py  app.py  helpers.py  plugin.py  style.py  ui.py  utils.py
src/megu/download/: __init__.py  base.py  discover.py  http.py
src/megu/models/: __init__.py  content.py  http.py  types.py
src/megu/plugin/: __init__.py  base.py  discover.py  generic.py  install.py  manage.py
tasks/: __init__.py  docs.py  linter.py  package.py  utils.py
tests/: __init__.py  conftest.py  constants.py  strategies.py  test_constants.py  test_exceptions.py  test_filters.py  test_hash.py  test_hasher.py  test_helpers.py  test_log.py  test_megu.py  test_models.py  test_pytest.py  test_services.py  test_utils.py
tests/assets/: __init__.py
tests/assets/plugins/: __init__.py  megu_bad_plugin.py  megu_empty_plugin.py  megu_failed_plugin.py  megu_good_plugin.py  megu_invalid_plugin.py  misnamed_test_plugin.py
tests/cli/: __init__.py  test_style.py  test_utils.py
tests/download/: __init__.py  test_base.py  test_discover.py  test_download.py  test_download_http.py  test_http.py
tests/models/: __init__.py  strategies.py  test_content.py  test_http.py
tests/plugin/: __init__.py  test_base.py  test_discover.py  test_plugin.py  test_plugin_generic.py
