[tool.poetry]
name = "megu"
version = "2.0.0"
description = "Plugin-centric HTTP media extractor and downloader"
authors = ["Stephen Bunn <stephen@bunn.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "megu", from = "src" }]
homepage = "https://github.com/stephen-bunn/megu"
repository = "https://github.com/stephen-bunn/megu"
documentation = "https://megu.readthedocs.io"
keywords = [
  "megu",
  "plugin",
  "media",
  "extract",
  "download"
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stephen-bunn/megu/issues"

[tool.poetry.scripts]
megu = "megu.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
appdirs = "^1.4.4"
humanfriendly = {version = "^10.0"}
glom = "^22.1.0"
typer = "^0.7.0"
rich = "^13.1.0"
diskcache = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
rope = "^1.6.0"
coverage = {extras = ["toml"], version = "^7.0.5"}
towncrier = "^22.12.0"
myst-parser = "^0.18.1"
toml = "^0.10.2"
sphinx-hoverxref = "^1.3.0"
furo = "^2022.12.7"
hypothesis = "^6.63.0"
tox = "^4.3.5"
pytest-xdist = "^3.1.0"
pytest-sugar = "^0.9.6"
respx = "^0.20.1"

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
src_paths = ["src", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-rxsX",
  "--flake8",
  "--cov",
  "--numprocesses=auto",
]
norecursedirs = [
  ".git",
  "dist",
  "docs"
]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
flake8-ignore = [
  "docs/source/*.py ALL",
  "tests/*.py ALL"
]

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = ["no-data-collected"]
source = ["src/megu/"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/stephen-bunn/megu/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/sephen-bunn/megu/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
